# heic_to_jpg

./: CMakeLists.txt  main.cpp
